themes/finna2/less/finna/searchbox.less
.nav.searchbox {
  .searchbox-home {
    .search-tooltip {
      width: 30%;
    }
    .btn.btn-link {
      background: @background-color;
      border-radius: @border-radius-small;
    }
    .btn.btn-link {
      color:  mix(@background-color, contrast(@background-color), 5%);
      font-size: 1em;
      font-weight: normal;
      line-height: 25px;
      margin-top: 0;
      padding: 0px 5px;
      overflow: hidden;
      text-transform: none;
      .adv-search {
        i {
          color:  mix(@body-bg, contrast(@body-bg), 95%);
        }
      }
    }
  }
  .pager {
    @media (max-width: @screen-lg) {
      margin-left: 6px;
    }
    li.pager-text {
      font-size: 1em;
      margin: 0px 3px;
      color:  mix(@finna-search-background, contrast(@finna-search-background), 5%);
    }
    li > a {
      padding: 0 5px;        
    }
  }
  @media (max-width: @screen-sm) {
    .dropdown.form-control {
      display: none;
    }
  }
}

.finna-filters, .checkboxFilter {
  .filters {
    display: inline-block;
  }
  input[type=checkbox] {
    height: 16px;
    width: 16px;
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;
    border: 1px solid @gray-light;
    border-radius: 4px;
    margin: 0px;
    top: 3px;

    &:checked{
      background-color: black;
      &:after{
        font-family: 'Fontawesome';
        content: "\f00c";
        color: white;
        position: absolute;
        font-size: 14px;
        line-height: 14px;
        font-weight: normal;
      }
    }
  }
}

// hidden navigation bar
.nav.searchbox .fixedbar.attached {
  background: rgba(0, 0, 0, 0.9);
  position: fixed;
  z-index: 1000;
  height: 50px;
  top: 0px;
  width: 100%;
  left: 0px;
}
.nav.searchbox .navbar-form {

  &.attached {
    z-index: 1000;
    margin: 0px;
    position: fixed;
    top: 5px;
    transition: none;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    .btn-link {
      display: none;
    }
  }
  .nav.searchbox {
    margin: 0;
  }
}

.back-to-search a {
  display: flex;
  align-items: center;
  font-size: 1em;
  font-weight: 600;
  color: @finna-search-link-color;
  i {
    vertical-align: text-top;
    font-size: 1.5em;
    margin-right: 5px;
  }
  .btn {
    margin-right: 10px;
  }
  .back-to-search-text {
    vertical-align: middle;
  }
}

.searchbox-columns {
  .search {
    position: relative;
    width: 100%;
    float: left;
    @media (min-width: @screen-sm) {
      width: 70%;
    }
    @media (min-width: @screen-md) {
      width: 60%;
    }
  }
  
  .search-tooltip {
    button {
      background-color: transparent;
      border: none;
      i {
        cursor: pointer;
      }
      &.tooltip-button {
        height: 50px;
      }
      &.tooltip-image {
        height: 30px;
      }
    }
    float: right;
    padding-left: 5px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding-right: 15px;
    @media (min-width: @screen-sm) {
      width: 30%;
      height: 48px;
    }
    @media (min-width: @screen-md) {
      width: 40%;
    }
  }
  a {color: @finna-search-link-color;}

  .search-links {
    margin-top: 15px;
    @media (max-width: @screen-xs-max) {
      a {
        margin-bottom: 5px;
      }
    }
  }
}

.searchbox-flex {
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  .search-col, .record-back, .adv-search, .pager {
    margin: auto 0;
  }
  .search {
    width: 50%;
    flex: 1;
  }
  .pager {
    display: flex;
    align-items: center;
    .disabled {
      color: mix(@finna-search-background, contrast(@finna-search-background), 50%);
    }
  }
  .search-tooltip {
    line-height: 48px;
    a {
      color: @finna-search-link-color;
    }
  }
  .back-to-search-text{
    padding-right: 10px;
  }
  @media(max-width: @screen-md) {
    .pager {
      li.pager-text {
        margin: 0 5px;
      }
    }
  }
  @media(max-width: @screen-sm-max) {
    .pager {
      min-width: 70px;
      margin-left: 10px;
      li:first-child {
        margin-right: 4px;
      }
      .pager-text {
        display:none;
      }
    }
    .record-back {
      margin-right: 10px;
    }
  }
}

